--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
-# Core dependencies for prep
-# No external dependencies required - uses only Python standard library
-
-# Development dependencies (for testing and development)
+pyinstaller
 pytest>=7.0.0
 pytest-cov>=4.0.0
